--- a/galeria.html
+++ b/galeria.html
@@ -63,7 +63,7 @@
                     <h3>Visita nuestro perfil de instagram para ver más imágenes y videos.</h3>
                     <div class="b-info-img">
                         <img src="img/icon/instagram-2-1-logo-svgrepo-com.svg" alt="icono de instagram" class="b-img">
-                        <button class="btn-1"><a download="Planilla-LCA" href="img/insta.jpg" target="_blank">Visitar</a></button>
+                        <button class="btn-1"><a href="https://www.instagram.com/academia.lca/" target="_blank">Visitar</a></button>
                     </div>
                 </div>
             </div>
